--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -1,19 +1,86 @@
-<h1>login</h1>
-<h2 align="center">Log in</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>辩论站临时标题</title>
+    <link rel="stylesheet" href="../../static/css/bootcss/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/bootcss/logo.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/bootcss/LOGIN.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/a.css">
+</head>
+<body style="background-color: #131418">
+    <div class="container" >
+        <div class="row clearfix">
+            <div class="col-md-1 column">
+                <span><img src="../../static/img/logowhite.png" width="50px" align="left" ></span>
+            </div>
+            <div class="col-md-11 column">
+                <nav class="navbar navbar-default" role="naviion" style="background-color: #28282c">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="Index.html" style="color: antiquewhite">首页</a>
+                    </div>
 
-<form method="post" action="{% url '登录页面' %}" align="center">
-    {% csrf_token %}
-    <br>
-    用户名:
-        <br>
-    <input type="text" name="用户名">
-        <br>
-    密码:
-    <br>
-    <input type="password" name="密码">
-    <br>
-    {{ 错误 }}
-    <br>
-    <input type="submit" value="登录">
-    <br>
-</form>
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav" >
+                            <li>
+                             {% if user.is_authenticated %}
+                                <a href="{% url '退出页面' %}" target="_blank">退出</a>
+                            {% else %}
+                                <a href="{% url '登录页面' %}" target="_blank">登录</a>
+                                <a href="{% url '注册页面' %}" target="_blank">注册</a>
+                            {% endif %}
+                            </li>
+                            <li>
+                                <a href="live.html"style="color: antiquewhite">直播</a>
+                            </li>
+                            <li>
+                                <a href="compitition.html"style="color: antiquewhite">在线比赛</a>
+                            </li>
+                            <li>
+                                <a href="videows.html"style="color: antiquewhite">视频</a>
+                            </li>
+                            <li>
+                                <a href="connect_to_us.html"style="color: antiquewhite">联系我们</a>
+                            </li>
+                            <li>
+                                <a href="requiring.html"style="color: antiquewhite">意见反馈</a>
+                            </li>
+                        </ul>
+                        <form class="navbar-form navbar-left" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="站内搜索"/>
+                            </div> <button type="submit" class="btn btn-default">search</button>
+                        </form>
+                    </div>
+
+                </nav>
+            </div>
+        </div>
+    </div>
+    <div class="logbox">
+        <div id="all_light">
+            <header style="margin-top: 15%;margin-left: 50%;" >
+               <img src="../../static/img/logowhite.png" width="134" height="124" style="position: absolute;">&nbsp;&nbsp;&nbsp;
+               <div style="position: absolute;font-family: 华文行楷;font-size: 60px;color: #fdfadf;margin-left: 180px;margin-top: 30px">Login</div>
+             </header>
+
+               <div style="display: inline;position: absolute;margin-left: 50%;margin-top: 20%">
+                   <form id="tijiao" method="post" action="{% url '登录页面' %}">
+                       {% csrf_token %}
+                       用户名:<input style="height:50px;width: 300px;border-radius: 9px;border-color: silver;font-size: 25px" type="text" name="用户名"><br><br><br><br>
+                       密  码:<input style="height:50px;width: 300px;border-radius: 9px;border-color: silver;font-size: 30px" type="password" name="密码"><br><br><br><br>
+                           {{ 错误 }}
+                       <div class="logbutton"style="margin: 0;">
+                           <button type="submit" style="font-family: 幼圆;border: none;">Login</button>
+                       </div>
+                       <a href="{% url '注册页面' %}" style="margin-top: 10px;position: absolute;margin-left: 120px;" >注册</a>
+                    </form>
+                </div>
+        </div>
+        <div id="middle" ></div>
+        <div id="contes">
+            <a href=""></a>
+        </div>
+    </div>
+</body>
+</html>
