--- a/account/templates/signup.html
+++ b/account/templates/signup.html
@@ -1,26 +1,79 @@
-<h1>signup</h1>
-<h2 align="center">Sign up</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>辩论站临时标题</title>
 
-<form method="post" action="{% url '注册页面' %}" align="center">
-    {% csrf_token %}
-    <br>
-    用户名:
-        <br>
-    <input type="text" name="用户名">
-        <br>
-    {{ 用户名错误 }}
-        <br>
+    <link rel="stylesheet" href="../../static/css/bootcss/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/bootcss/logo.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/bootcss/LOGIN.css">
+    <link rel="stylesheet" href="../../static/css/a.css">
+</head>
+<body>
+<div class="container">
+    <div class="row clearfix">
+        <div class="col-md-1 column">
+            <span><img src="../../static/img/logo.png" width="50px" align="left"></span>
+        </div>
+        <div class="col-md-11 column">
+            <nav class="navbar navbar-default" role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">首页</a>
+                </div>
 
-    密码:
-    <br>
-    <input type="password" name="密码">
-    <br>
-    确认密码:
-    <br>
-    <input type="password" name="确认密码">
-    <br>
-    {{ 密码错误 }}
-    <br>
-    <input type="submit" value="立即注册">
-    <br>
-</form>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="javascript:void(0)" onclick="add()">登录</a>
+                        </li>
+                        <li>
+                            <a href="#">直播</a>
+                        </li>
+                        <li>
+                            <a href="#">在线比赛</a>
+                        </li>
+                        <li>
+                            <a href="#">视频</a>
+                        </li>
+                        <li>
+                            <a href="../../templates/connect_to_us.html">联系我们</a>
+                        </li>
+                        <li>
+                            <a href="../../templates/requiring.html">意见反馈</a>
+                        </li>
+                    </ul>
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="站内搜索"/>
+                        </div> <button type="submit" class="btn btn-default">search</button>
+                    </form>
+                </div>
+
+            </nav>
+        </div>
+    </div>
+</div>
+<div id="contes" style="">
+    <div style="width:170px;height:220px; left: 370px;top: 67px">
+        <form style=" margin-left: 20px; margin-top: 10px;" method="post" action="{% url '注册页面' %}">
+            {% csrf_token %}
+            <span style="color: #f60503;font-size: 30px;letter-spacing: 3px; ">注</span><span style="font-size: 20px">册</span><br><br>
+            <input style="max-height: 20px;width: 140px;border-radius:4px" type="text" name="用户名" placeholder="用户名"><br><br>
+            {{ 用户名错误 }}
+            <input style="max-height: 20px;width: 140px;border-radius:4px" type="password"  name="密码" placeholder="密码"><br><br>
+            <input style="max-height: 20px;width: 140px;border-radius:4px" type="password" name="确认密码">
+            {{ 密码错误 }}
+            <input type="submit" value="注册">
+        </form>
+    </div>
+</div>
+<div id="all_light">
+</div>
+</body>
+<script>
+    function add() {
+        document.getElementById('all_light').style.display = 'block';
+        document.getElementById('contes').style.display = 'block';
+    }
+</script>
+</html>
