--- a/templates/Index.html
+++ b/templates/Index.html
@@ -5,7 +5,6 @@
     <title>辩论站临时标题</title>
 
     <link rel="stylesheet" href="../static/css/bootcss/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/bootcss/logo.css">
     <link rel="stylesheet" type="text/css" href="../static/css/bootcss/LOGIN.css">
     <link rel="stylesheet" href="../static/css/a.css">
 </head>
@@ -18,20 +17,18 @@
         <div class="col-md-11 column">
             <nav class="navbar navbar-default" role="navigation">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="Index.html">首页</a>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="{% url '主页' %}">首页</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
-                            <!--                            {% if user.is_authenticated %}-->
-                            <!--                                <a href="#">注销</a>-->
-                            <!--                                <form method="POST" action="Index.html"></form>-->
-                            <!--                                {% csrf_token %}-->
-                            <!--                            <input type="hidden">-->
-                            <!--                            {% else %}-->
-                            <a href="login.html" target="_blank">登录</a>
-                            <!--                            {% endif %}-->
+                            {% if user.is_authenticated %}
+                                <a href="{% url '退出页面' %}" target="_blank">退出</a>
+                            {% else %}
+                                <a href="{% url '登录页面' %}" target="_blank">登录</a>
+                                <a href="{% url '注册页面' %}" target="_blank">注册</a>
+                            {% endif %}
                         </li>
                         <li>
                             <a href="live.html">直播</a>
