更新了主页
重写了login 和 signup 添加了验证码

--- a/account/templates/signup.html
+++ b/account/templates/signup.html
@@ -1,79 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>辩论站临时标题</title>
+<form method="post" action="/account/signup/">
+    {% csrf_token %}
+    <p><label for="id_username">用户名:</label> <input type="text" name="username" maxlength="150" autofocus required
+                                                    id="id_username">
+    {{ 注册表单.errors.username }}
+    <p><label for="id_password1">密码:</label> <input type="password" name="password1" required id="id_password1">
+        {{ 注册表单.errors.password1 }}
+    <p><label for="id_password2">密码确认:</label> <input type="password" name="password2" required id="id_password2">
+        {{ 注册表单.errors.username2 }}
+    <p><label for="id_email">电子邮件地址:</label> <input type="email" name="email" maxlength="254" id="id_email"></p>
+        {{ 注册表单.errors.email }}
+    <p><label for="id_昵称">昵称:</label> <input type="text" name="昵称" maxlength="50" id="id_昵称"></p>
+    <p><label for="id_生日">生日:</label> <input type="date" name="生日" id="id_生日"></p>
+        {{ 注册表单.验证码 }}
+        {{ 注册表单.errors.验证码 }}
+    <button type="submit">注册</button>
 
-    <link rel="stylesheet" href="../../static/css/bootcss/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/bootcss/logo.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/bootcss/LOGIN.css">
-    <link rel="stylesheet" href="../../static/css/a.css">
-</head>
-<body>
-<div class="container">
-    <div class="row clearfix">
-        <div class="col-md-1 column">
-            <span><img src="../../static/img/logo.png" width="50px" align="left"></span>
-        </div>
-        <div class="col-md-11 column">
-            <nav class="navbar navbar-default" role="navigation">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">首页</a>
-                </div>
-
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            <a href="javascript:void(0)" onclick="add()">登录</a>
-                        </li>
-                        <li>
-                            <a href="#">直播</a>
-                        </li>
-                        <li>
-                            <a href="#">在线比赛</a>
-                        </li>
-                        <li>
-                            <a href="#">视频</a>
-                        </li>
-                        <li>
-                            <a href="../../templates/connect_to_us.html">联系我们</a>
-                        </li>
-                        <li>
-                            <a href="../../templates/requiring.html">意见反馈</a>
-                        </li>
-                    </ul>
-                    <form class="navbar-form navbar-left" role="search">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="站内搜索"/>
-                        </div> <button type="submit" class="btn btn-default">search</button>
-                    </form>
-                </div>
-
-            </nav>
-        </div>
-    </div>
-</div>
-<div id="contes" style="">
-    <div style="width:170px;height:220px; left: 370px;top: 67px">
-        <form style=" margin-left: 20px; margin-top: 10px;" method="post" action="{% url '注册页面' %}">
-            {% csrf_token %}
-            <span style="color: #f60503;font-size: 30px;letter-spacing: 3px; ">注</span><span style="font-size: 20px">册</span><br><br>
-            <input style="max-height: 20px;width: 140px;border-radius:4px" type="text" name="用户名" placeholder="用户名"><br><br>
-            {{ 用户名错误 }}
-            <input style="max-height: 20px;width: 140px;border-radius:4px" type="password"  name="密码" placeholder="密码"><br><br>
-            <input style="max-height: 20px;width: 140px;border-radius:4px" type="password" name="确认密码">
-            {{ 密码错误 }}
-            <input type="submit" value="注册">
-        </form>
-    </div>
-</div>
-<div id="all_light">
-</div>
-</body>
-<script>
-    function add() {
-        document.getElementById('all_light').style.display = 'block';
-        document.getElementById('contes').style.display = 'block';
-    }
-</script>
-</html>
+</form>
