--- a/templates/videos.html
+++ b/templates/videos.html
@@ -38,7 +38,7 @@
                             <a href="compitition.html">在线比赛</a>
                         </li>
                         <li>
-                            <a href="videows.html">视频</a>
+                            <a href="videos.html">视频</a>
                         </li>
                         <li>
                             <a href="connect_to_us.html">联系我们</a>
