--- a/templates/Index.html
+++ b/templates/Index.html
@@ -2,58 +2,79 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>辩论站临时标题</title>
-
-    <link rel="stylesheet" href="../static/css/bootcss/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/bootcss/LOGIN.css">
-    <link rel="stylesheet" href="../static/css/a.css">
+    <title>标题交给何方耀</title>
+    <link rel="stylesheet" href="../static/css/index.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 </head>
 <body>
-<div class="container">
-    <div class="row clearfix">
-        <div class="col-md-1 column">
-            <span><img src="../static/img/logo.png" width="50px" align="left"></span>
-        </div>
-        <div class="col-md-11 column">
-            <nav class="navbar navbar-default" role="navigation">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="{% url '主页' %}">首页</a>
-                </div>
+<div class="services-section">
+    <div class="grayscreen"></div>
+    <div class="inner-width">
+        <h1 class="section-title">欢迎来到DBground</h1>
+        <div class="border"></div>
+        <div class="services-container">
 
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li>
-                            {% if user.is_authenticated %}
-                                <a href="{% url '退出页面' %}" target="_blank">退出</a>
-                            {% else %}
-                                <a href="{% url '登录页面' %}" target="_blank">登录</a>
-                                <a href="{% url '注册页面' %}" target="_blank">注册</a>
-                            {% endif %}
-                        </li>
-                        <li>
-                            <a href="live.html">直播</a>
-                        </li>
-                        <li>
-                            <a href="compitition.html">在线比赛</a>
-                        </li>
-                        <li>
-                            <a href="videows.html">视频</a>
-                        </li>
-                        <li>
-                            <a href="connect_to_us.html">联系我们</a>
-                        </li>
-                        <li>
-                            <a href="requiring.html">意见反馈</a>
-                        </li>
-                    </ul>
-                    <form class="navbar-form navbar-left" role="search">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="站内搜索"/>
-                        </div> <button type="submit" class="btn btn-default">search</button>
-                    </form>
+            <div class="service-box">
+                <div class="service-icon">
+                    <i class="fas fa-paint-brush"></i>
                 </div>
+                <div class="service-title">Debate push</div>
+                <div class="service-desc">
+                    Lorem ipsum dolor sit amet,consectetur adipisicing elit.
+                </div>
+            </div>
 
-            </nav>
+            <div class="service-box" onclick="window.location.href='videos.html'">
+                <div class="service-icon">
+                    <i class="fas fa-paint-brush"></i>
+                </div>
+                <div class="service-title">Videos</div>
+                <div class="service-desc">
+                    Lorem ipsum dolor sit amet,consectetur adipisicing elit.
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-icon">
+                    <i class="fas fa-paint-brush"></i>
+                </div>
+                <div class="service-title">Live</div>
+                <div class="service-desc">
+                    Lorem ipsum dolor sit amet,consectetur adipisicing elit.
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-icon">
+                    <i class="fas fa-paint-brush"></i>
+                </div>
+                <div class="service-title">Online competition</div>
+                <div class="service-desc">
+                    Lorem ipsum dolor sit amet,consectetur adipisicing elit.
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-icon">
+                    <i class="fas fa-paint-brush"></i>
+                </div>
+                <div class="service-title">Sharing furum</div>
+                <div class="service-desc">
+                    Lorem ipsum dolor sit amet,consectetur adipisicing elit.
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-icon">
+                    <i class="fas fa-paint-brush"></i>
+                </div>
+                <div class="service-title">join us</div>
+                <div class="service-desc">
+                    Lorem ipsum dolor sit amet,consectetur adipisicing elit.
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
