完善了很多页面的前端

--- a/account/templates/change_password.html
+++ b/account/templates/change_password.html
@@ -3,29 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>修改密码</title>
+    <link rel="stylesheet" href="../../static/css/changepassword.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
 </head>
 <body>
-    <a href="{% url '主页' %}">回到主页</a>
-    <a href="{% url '退出页面' %}">退出</a>
-    <a href="{% url '编辑个人信息' %}">编辑个人信息</a>
-    <a href="{% url '修改密码' %}">修改密码</a>
-    {{ 改密表单.errors }}
-<form method="POST" action="">
-    {% csrf_token %}
-    <p>
-        <label for="id_old_password">旧密码:</label>
-        <input type="password" name="old_password" autofocus required id="id_old_password">
-    </p>
-    <p>
-        <label for="id_new_password1">新密码:</label>
-        <input type="password" name="new_password1" required id="id_new_password1">
-        <span class="helptext"><ul><li>你的密码不能与其他个人信息太相似。</li><li>你的密码必须包含至少 8 个字符。</li><li>你的密码不能是大家都爱用的常见密码。</li><li>你的密码不能全部为数字。</li></ul></span>
-    </p>
-    <p>
-        <label for="id_new_password2">新密码确认:</label>
-        <input type="password" name="new_password2" required id="id_new_password2">
-    </p>
-    <button type="submit">提交</button>
-</form>
+    <div class="box-back"></div>
+    <div class="top">
+        <div class="top-i">
+            <i class="fas fa-cannabis"></i>
+        </div>
+        <div class="top-a">
+            <ul>
+                <li><a href="{% url '主页' %}">回到主页</a></li>
+                <li><a href="{% url '退出页面' %}">退出</a></li>
+                <li><a href="{% url '编辑个人信息' %}">编辑个人信息</a></li>
+                <li><a href="{% url '修改密码' %}">修改密码</a></li>
+            </ul>
+        </div>
+    </div>
+        <div class="box">
+
+        <form method="POST" action="">
+        {% csrf_token %}
+            <p>
+                <label for="id_old_password"><span class="box-font">旧密码</span></label>
+                <input type="password" name="old_password" autofocus required id="id_old_password">
+             </p>
+            <p>
+            <label for="id_new_password1"><span class="box-font">新的密码</span></label>
+            <input class="clickit" type="password" name="new_password1" required id="id_new_password1">
+            </p>
+            <p>
+                <label for="id_new_password2"><span class="box-font">密码确认</span></label>
+                <input type="password" name="new_password2" required id="id_new_password2">
+            </p>
+                <div style="color: white">{% if 改密表单.errors %}
+                旧密码输入错误，或新密码输入不一致！
+                {% endif %}
+                </div>
+            <input type="submit"></input>
+        </form>
+    </div>
 </body>
 </html>
