--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -1,15 +1,54 @@
-    <a href="{% url '主页' %}">回到主页</a>
-    <a href="{% url '退出页面' %}">退出</a>
-    <a href="{% url '编辑个人信息' %}">编辑个人信息</a>
-    <a href="{% url '修改密码' %}">修改密码</a>
- <form id="tijiao" method="post" action="{% url '登录页面' %}">
-    {% csrf_token %}
-    用户名:<input  type="text" name="username"><br><br><br><br>
-    密  码:<input  type="password" name="password"><br><br><br><br>
-     {{ 错误 }}
-    <div class="logbutton">
-        <button type="submit" >Login</button>
-    </div>
-    {{ 登录表单.验证码 }}
-    {{ 登录表单.errors.验证码 }}
-</form>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Maples Debate</title>
+  </head>
+  <link rel="stylesheet" href="../../static/css/login.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+  <link rel="stylesheet" href="../../static/css/errors.css">
+  <body>
+  <div class="top">
+      <div class="top-i">
+            <i class="fas fa-cannabis"></i>&nbsp;&nbsp;&nbsp;
+      </div>
+      <div class="top-a">
+          <ul>
+              <li><a href="{% url '主页' %}">回到主页</a></li>
+              <li><a href="{% url '编辑个人信息' %}">个人信息</a></li>
+              <li><a href="{% url '修改密码' %}">修改密码</a></li>
+              <li><a href="{% url '登录页面' %}">登录页面</a></li>
+          </ul>
+      </div>
+  </div>
+    <div class="box-back-1"></div>
+  <div class="box">
+
+    <form id="tijiao" method="post" action="{% url '登录页面' %}" class="box">
+        {% csrf_token %}
+        <span class="box-font">用户名</span><input style="font-size: large" type="text" name="username" placeholder="Username">
+        <span class="box-font">密码</span><input  type="password" name="password" placeholder="password">
+         <div class="box-error">
+             {% if 登录表单.errors %}
+             用户名或密码错误
+             {% endif %}
+             </div>
+         <br>
+         <div class="box-error" style="color: white">{{ 登录表单.验证码 }}</div>
+         <a class="restart" href={% url '登录页面' %} >
+            <i class="fas fa-sync-alt"></i>
+         </a>
+         <div class="box-error"></div>
+        <div style="color: white;font-size: 25px;text-align: center;font-weight: bold">{% if 登录表单.errors.验证码 %}
+            验证码错误
+
+            </div>
+
+        {% endif %}
+        <div class="logbutton">
+            <input type="submit" ></input>
+        </div>
+    </form>
+  </div>
+  </body>
+</html>
