--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,19 +3,26 @@
     padding: 0;
     font-family: "montserrat",sans-serif;
     box-sizing: border-box;
+
 }
 
 .services-section{
-    background: url(../img/index.jpg);
-    background-size: 1920px 1350px;
+    background: url(../img/index.png) no-repeat center 0;
+    background-size: 1900px 1350px;
     padding: 360px 0;
-    z-index: 0;
-
-}
-.grayscreen{
     z-index: 1;
+}
+#grayscreen{
     background-color: black;
-    opacity: 0.5;
+    opacity: 0.7;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: auto;
+    z-index: 2;
+    display: block;
+
 }
 .inner-width{
     width: 100%;
@@ -23,21 +30,37 @@
     margin: auto;
     padding: 0 20px;
     overflow: hidden;
-    z-index: 2;
+    z-index: 3;
 }
 
 .section-title{
     text-align: center;
-    color: #3d72a4;
+    color: #00bdf3;
     text-transform: uppercase;
     font-size: 30px;
 }
+.service-a{
+    text-decoration: none;
+    color: #08f2ff;
+    font-size: 20px;
+}
 
+.service-log{
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    color: #08f2ff;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: none;
+    font-family: 微软雅黑
+
+}
 .border{
     width: 200px;
     height: 2px;
-    background: antiquewhite;
-    margin: 40px auto;
+    background: #08f2ff;
+    margin: 10px auto;
 }
 
 .services-container{
@@ -50,19 +73,19 @@
     max-width: 33.33%;
     padding: 10px;
     text-align: center;
-    color: #73b700;
+    color: antiquewhite;
     cursor: pointer;
 }
 .service-icon{
     display: inline-block;
     width: 70px;
     height: 70px;
-    border: 3px solid #08f2ff;
+    border: 3px solid ;
     color: #08f2ff;
     transform: rotate(45deg);
     margin-bottom: 30px;
     margin-top: 16px;
-    transition: 0.3s linear;
+    transition: 0.5s linear;
 }
 .service-icon i{
     line-height: 70px;
@@ -70,9 +93,19 @@
     font-size: 26px;
 }
 
-.search-box:hover .service-icon{
-    background: #82ccdd;
-    color: #ddd;
+.service-box:hover .service-icon{
+    background: #08f8ff;
+    color: antiquewhite;
+ }
+.service-box:hover .service-title{
+    color: #00f4ff;
+    transition-duration: 1.2s;
+}
+.service-box:hover .service-desc{
+    color: #00f4ff;
+    font-size: 18px;
+    transition-duration: 1.2s;
+    transition-timing-function: ease;
 }
 .service-title{
     font-size: 18px;
